# ft2232_driver

./: .gitignore  CMakeLists.txt  eepr_conf.ept  eeprom_config.xml  main.c  main.h  readFTDI.m  readme.md  receiveData.lnk
ftSrc/: ftd2xx.h  nCML.txt
